<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    tools:context=".edit_task">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary">

        <Button
            android:id="@+id/btn_cancel_edit_task"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:background="@drawable/btn_redondo"
            app:backgroundTint="#8BC34A"
            app:icon="@drawable/abc_vector_test"
            app:layout_constraintBottom_toBottomOf="@+id/btn_end"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btn_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="23dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/btn_redondo"
            app:backgroundTint="#8BC34A"
            app:icon="@android:drawable/ic_menu_send"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_date"
            android:layout_width="300dp"
            android:layout_height="41dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn_redondo"
            android:text="@string/btn_date"
            android:textColor="#000000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textview_date" />

        <TextView
            android:id="@+id/textview_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginTop="44dp"
            android:text="00/00/0000"
            android:textColor="#FF03DAC5"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_title_edit_task" />

        <TextView
            android:id="@+id/txt_hour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="156dp"
            android:layout_marginTop="44dp"
            android:text="00 : 00"
            android:textColor="#FF03DAC5"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/textview_date"
            app:layout_constraintTop_toBottomOf="@+id/txt_title_edit_task" />

        <TextView
            android:id="@+id/txt_title_edit_task"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="20dp"
            android:text="@string/task_title"
            android:textColor="#ae3b76"
            android:textSize="30sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_cancel_edit_task" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/question_add_reminder"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_date" />

        <Button
            android:id="@+id/btn_add_reminder"
            android:layout_width="150dp"
            android:layout_height="41dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn_redondo"
            android:text="@string/add_reminder"
            android:textColor="#000000"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.48"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView9" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_reminders"
            android:layout_width="325dp"
            android:layout_height="260dp"
            android:layout_marginTop="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_add_reminder" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>