<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.proyecto_notas.Add_note">

    <!-- TODO: Update blank fragment layout -->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary">

        <EditText
            android:id="@+id/edtxt_description"
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:hint="@string/note_description"
            android:inputType="textPersonName"
            android:textColorHint="#E1DEDE"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtxt_title" />

        <EditText
            android:id="@+id/edtxt_title"
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:hint="@string/note_title"
            android:inputType="textPersonName"
            android:textColorHint="#FFFFFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/edtxt_description"
            app:layout_constraintTop_toBottomOf="@+id/btn_cancel" />

        <Spinner
            android:id="@+id/sp_note_type"
            android:layout_width="186dp"
            android:layout_height="19dp"
            android:layout_marginTop="10dp"
            android:entries="@array/type"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="160dp"
            android:layout_marginTop="10dp"
            android:text="@string/note_type"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtxt_description" />

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/btn_redondo"
            android:textColor="#000000"
            app:backgroundTint="#8BC34A"
            app:icon="@drawable/abc_vector_test"
            app:iconSize="35dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_next"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/btn_redondo"
            android:textColor="#000000"
            app:backgroundTint="#8BC34A"
            app:icon="@android:drawable/ic_menu_send"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_add_video"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/btn_redondo"
            android:textColor="#000000"
            android:textSize="8dp"
            app:icon="@android:drawable/presence_video_busy"
            app:iconSize="40dp"
            app:iconTint="#000000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/rv_media"
            app:layout_constraintTop_toBottomOf="@+id/btn_add_image" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/questionAdd_media"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.503"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sp_note_type" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_media"
            android:layout_width="160dp"
            android:layout_height="400dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="50dp"
            app:layout_constraintBottom_toTopOf="@+id/btn_add_file"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5"
            app:layout_constraintVertical_bias="0.018" />

        <EditText
            android:id="@+id/file_description"
            android:layout_width="150dp"
            android:layout_height="48dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="1dp"
            android:ems="10"
            android:hint="@string/arch_description"
            android:inputType="textPersonName"
            android:textColor="@android:color/darker_gray"
            android:textColorHint="#FFFFFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.519"
            app:layout_constraintStart_toEndOf="@+id/rv_media"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <Button
            android:id="@+id/btn_add_image"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/btn_redondo"
            android:textColor="#000000"
            android:textSize="8dp"
            app:icon="@android:drawable/ic_menu_camera"
            app:iconSize="40dp"
            app:iconTint="#000000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/rv_media"
            app:layout_constraintTop_toBottomOf="@+id/file_description" />

        <Button
            android:id="@+id/btn_add_audio"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/btn_redondo"
            android:textColor="#000000"
            android:textSize="8dp"
            app:icon="@android:drawable/ic_btn_speak_now"
            app:iconSize="40dp"
            app:iconTint="#000000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/rv_media"
            app:layout_constraintTop_toBottomOf="@+id/btn_add_video" />

        <Button
            android:id="@+id/btn_add_file"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/btn_redondo"
            android:textColor="#050505"
            android:textSize="8dp"
            app:icon="@android:drawable/ic_menu_gallery"
            app:iconPadding="40dp"
            app:iconTint="#000000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/rv_media"
            app:layout_constraintTop_toBottomOf="@+id/btn_add_audio" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>